[package]
name = "re"
version = "0.1.0"
edition = "2021"

[dependencies]

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = "0.7.12"
mime_guess = "2.0.5"
url = "2.5.3"
percent-encoding = "2.3.1"
